Add yarn test-adminpage and just run yarn test-adminpage in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,9 +35,7 @@ matrix:
   - php: "7.2"
     env: WP_TRAVISCI="yarn lint"
   - php: "7.2"
-    env: WP_TRAVISCI="yarn test-client"
-  - php: "7.2"
-    env: WP_TRAVISCI="yarn test-gui"
+    env: WP_TRAVISCI="yarn test-adminpage"
   - php: "7.2"
     env: WP_TRAVISCI="yarn danger ci"
   - php: "7.0"
