--- a/.travis.yml
+++ b/.travis.yml
@@ -28,22 +28,30 @@ cache:
 # WP_VERSION specifies the tag to use. The way these tests are configured to run
 # requires at least WordPress 3.8. Specify "master" to test against SVN trunk.
 
-matrix:
+jobs:
   include:
-  - php: "7.2"
+  - stage: compatibility
+    php: "7.2"
     env: WP_TRAVISCI="yarn php:5.2-compatibility"
-  - php: "7.2"
+  - stage: lint
+    php: "7.2"
     env: WP_TRAVISCI="yarn lint"
-  - php: "7.2"
-    env: WP_TRAVISCI="yarn test-adminpage"
-  - php: "7.2"
+  - stage: Danger CI
+    php: "7.2"
     env: WP_TRAVISCI="yarn danger ci"
-  - php: "7.0"
+  - stage: test
+    php: "7.2"
+    env: WP_TRAVISCI="yarn test-adminpage"
+  - stage: test
+    php: "7.0"
     env: "SWITCH_TO_PHP=5.2"
     dist: precise
-  - php: "5.6"
-  - php: "7.0"
-  - php: "7.2"
+  - stage: test
+    php: "5.6"
+  - stage: test
+    php: "7.0"
+  - stage: test
+    php: "7.2"
 
 # whitelist branches for the "push" build check.
 branches:
