--- a/.travis.yml
+++ b/.travis.yml
@@ -28,9 +28,14 @@ cache:
 # WP_VERSION specifies the tag to use. The way these tests are configured to run
 # requires at least WordPress 3.8. Specify "master" to test against SVN trunk.
 
+stages:
+  - lint
+  - Danger CI
+  - test
+
 jobs:
   include:
-  - stage: compatibility
+  - stage: lint
     php: "7.2"
     env: WP_TRAVISCI="yarn php:5.2-compatibility"
   - stage: lint
@@ -42,16 +47,19 @@ jobs:
   - stage: test
     php: "7.2"
     env: WP_TRAVISCI="yarn test-adminpage"
-  - stage: test
+  - 
+    php: "7.2"
+  - 
+    if: branch = master AND type = push
     php: "7.0"
     env: "SWITCH_TO_PHP=5.2"
     dist: precise
-  - stage: test
+  -
+    if: branch = master AND type = push
     php: "5.6"
-  - stage: test
+  -
+    if: branch = master AND type = push
     php: "7.0"
-  - stage: test
-    php: "7.2"
 
 # whitelist branches for the "push" build check.
 branches:
